--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -7,10 +7,10 @@ import Layout from '../layouts/Layout.astro';
   description="Your privacy is crucial to us. Learn how Helm collects, uses, protects, and shares information when you visit our website."
 >
     <!-- Hero Section -->
-    <section class="relative min-h-[200px] sm:min-h-[300px] flex items-center justify-start bg-cover bg-center" style="background-image: url('/images/privacy-page/privacy-page-banner-bg.jpg');">
+    <section class="relative min-h-[200px] sm:min-h-[300px] flex items-center justify-center bg-cover bg-center" style="background-image: url('/images/privacy-page/privacy-page-banner-bg.jpg');">
       <div class="absolute inset-0 bg-purple-900 bg-opacity-70"></div>
       <div class="relative container mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-20">
-        <h1 class="text-3xl sm:text-4xl lg:text-6xl font-bold text-yellow-400">Privacy Policy</h1>
+        <h1 class="text-3xl sm:text-4xl lg:text-6xl font-bold text-yellow-400 text-center">Privacy Policy</h1>
       </div>
     </section>
 
