--- a/src/pages/executive-assistant.astro
+++ b/src/pages/executive-assistant.astro
@@ -155,12 +155,12 @@ const howItWorksSteps = [
         >
           Get a Custom Quote
         </button>
-        <a
-          href="#why-choose"
+        <button
+          data-open-learn-more-modal
           class="inline-flex items-center justify-center font-semibold text-white transition-all duration-200 hero-btn-responsive btn-learn-more"
         >
           Learn More
-        </a>
+        </button>
       </div>
     </div>
   </section>
@@ -317,12 +317,12 @@ const howItWorksSteps = [
           >
             Get a Custom Quote
           </button>
-          <a
-            href="#how-it-works"
+          <button
+            data-open-learn-more-modal
             class="inline-flex items-center justify-center font-semibold text-white transition-all duration-200 pricing-btn-responsive btn-learn-more"
           >
             Learn More
-          </a>
+          </button>
         </div>
       </div>
     </div>
