--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -40,7 +40,7 @@ import services from '../data/services.json';
           Our client partners have asked for help with just about everything under the sun. Let's discuss your unique requirements.
         </p>
         <Button
-          href="/contact"
+          openModal={true}
           variant="primary"
           size="lg"
           track="services-cta"
