--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -50,7 +50,8 @@ const currentYear = new Date().getFullYear();
       </div>
 
       <div class="text-left md:text-right">
-        <a href="/disclaimer" class="block text-sm hover:text-gray-300 transition-colors mb-2">Privacy Policy</a>
+        <a href="/contact" class="block text-sm hover:text-gray-300 transition-colors mb-2">Contact Us</a>
+        <a href="/privacy-policy" class="block text-sm hover:text-gray-300 transition-colors mb-2">Privacy Policy</a>
         <p class="text-sm text-gray-300">
           © {currentYear} Helm. All Rights Reserved.
         </p>
