--- a/src/pages/executive-assistant.astro
+++ b/src/pages/executive-assistant.astro
@@ -284,7 +284,7 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <SupportServicesGrid services={supportServices} />
+      <SupportServicesGrid services={supportServices} buttonText="Request a demo" />
     </div>
   </section>
 
